--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0%;
-  padding: 0%;
-  box-sizing: border-box;
-}
-
 @font-face {
   font-family: "Inter";
   src: url("./fonts/Inter-Regular.ttf") format("truetype");
@@ -28,25 +22,26 @@
   font-weight: 800;
 }
 
-.primary {
-  color: #0d1530;
+:root {
+  --primary: #0d1530;
+  --secondary: #ffffff;
+  --highlights: #7b68ee;
+  --font-main: "Inter", sans-serif;
 }
 
-.secondary {
-  color: #ffffff;
-}
-.highlights {
-  color: #7b68ee;
-}
-.tag {
-  color: #f7486d;
-}
-.add {
-  color: #d41b69;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: var(--font-main);
 }
 
-body {
-  font-family: "Inter", sans-serif;
+.top-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .discover {
@@ -54,13 +49,14 @@ body {
   justify-content: center;
   align-items: center;
   padding: 10px 0px 10px 0px;
-  background-color: #0d1530;
+  background-color: var(--primary);
   width: 100vw;
 }
 
 .discover-text {
   font-size: 12px;
   font-weight: 700;
+  color: var(--secondary);
   margin-right: 100px;
 }
 
@@ -68,7 +64,8 @@ body {
   font-size: 12px;
   font-weight: 700;
   padding: 2px 30px 2px 30px;
-  background-color: #7b68ee;
+  background-color: var(--highlights);
+  color: var(--secondary);
   border: none;
   border-radius: 5px;
 }
@@ -109,26 +106,94 @@ body {
   font-size: 14px;
   font-weight: 700;
   padding: 10px 20px;
-  background-color: #7b68ee;
+  background-color: var(--highlights);
+  color: var(--secondary);
   border-radius: 10px;
   box-shadow: 0 8px 20px rgba(123, 92, 251, 0.4);
 }
 
-.hero {
+.hero-section {
   display: flex;
-  margin: 0px 175px 0px 175px;
+  margin: 170px 175px 60px 175px;
+}
+
+@media (max-width: 640px) {
+  .hero-section {
+    flex-direction: row;
+  }
 }
 
 .left-hero {
   flex: 1;
-  padding-right: 250px;
 }
-.left-hero>h1{
-    font-size: 48px;
-    font-weight: 800;
-    color: #333333;
+.left-hero-content {
+  padding-right: 190px;
+  padding-top: 50px;
+  width: 100%;
+}
+.left-hero-content > h1 {
+  font-size: 48px;
+  font-weight: 800;
+  color: #333333;
+  line-height: 1.3;
+  margin-bottom: 50px;
+}
+.left-hero-content > p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #333333;
+  line-height: 1.7;
+  margin-bottom: 30px;
 }
 
+.left-hero-content > input {
+  padding: 20px 20px 20px 20px;
+  border: 2px solid #b9bec7;
+  border-radius: 10px;
+  width: 360px;
+  margin-bottom: 20px;
+}
+
+.get-started {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 60px;
+}
+.get-started > button {
+  padding: 20px 35px 20px 35px;
+  border: none;
+  color: var(--secondary);
+  background-color: var(--highlights);
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(123, 92, 251, 0.4);
+  font-size: 14px;
+  font-weight: 700;
+  transition: 0.4s;
+}
+
+.get-started > button:active {
+  transform: translateY(5px);
+}
+
+.get-started > p {
+  color: #b9bec7;
+  font-size: 12px;
+  font-weight: 700;
+  margin-left: 10px;
+  letter-spacing: 1.5px;
+  line-height: 1.5;
+  margin: 10px;
+}
+
+.stars {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+}
+.stars>p{
+  font-size: 12px;
+  color:#7C828D;
+}
 .right-hero {
   flex: 1;
   display: flex;
@@ -142,4 +207,14 @@ body {
   height: auto;
   /* padding: 50px 50px 50px 50px; */
   border-radius: 25px;
+}
+
+
+.sponsors{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+  background-color: var(--primary);
+  padding: 15px 0px 15px 0px;
 }
